Fix mobile time input alignment by constraining width instead of flex-1
Replace flex-1 with w-[5ch] on mobile hero edit input so centered text
fills the narrow input and appears left-aligned. Remove unused
time-left-align CSS rule.

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -121,10 +121,6 @@
   }
 }
 
-/* Force left-align time inputs on mobile Safari */
-input[type="time"].time-left-align::-webkit-date-and-time-value {
-  text-align: left;
-}
 
 /* Remove blue highlight that appears when dragging clock tiles */
 [data-testid^="draggable-zone-"] {
